assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:ital,wght@1,700&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: montserrat, sans-serif; 
    font-weight: 200;
    color: black;
}

/* headings and logo */

h1, h2 {
    font-family: open+sans, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: black;

}

h3, h4 {
    font-family: open+sans, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4PX;
    color: darkorange;
}

#logo {
    font-size:1.5rem;
    text-align: center;
    min-width: 100%;
    color: black;
    padding-bottom: 20px;
}

/* nav links */

nav {
    height: 17vh;
}
#menu {

    letter-spacing: 4px;
}

#menu #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
    padding: 20px 0 0 0;
}

#menu, a {
    text-decoration: none;
    color:black;
}

#menu a:hover {
    border-bottom: 1px solid #3a3a3a;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* image and cover text */

#team-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;

    position: relative;
}

#cover-text, #cove-text h2 {
    color: black;
}

*{
    box-sizing: border-box;
}

.images {
    float: left;
    width: 33.33%;
    padding: 3px;
    height: 300px;
}

.images img {
    height: 300px;
}

#cover-text {
    font-family: open+sans, sans-serif;
    text-transform: uppercase;
    letter-spacing: 6px;

    width: 300px;
    height: 250px;

    padding-top: 20px;
    padding-left: 10px;

    background-color: rgb(251, 255, 0);

    bottom: 20px;
    right: 150px;

    position: absolute;
}

/* team ethos */

#team-ethos {
    display: flex;
    flex-direction: column;
}

#left-about {
    padding-top: 30px;
    width: 100%;
    float: left;
    background-color: yellow;
    border: 1px solid blue;
    min-height: 100%;
}

.left-about-main-text {
    font-size: 1rem;
}

.left-about-heading {
    text-align: center;
    font-size: 1.5rem;
}

#right-about {
    padding-top: 30px;
    width: 100%;
    float: right; 
    background-color: black;
    color: darkorange;
    border: 1px solid blue;
    min-height: 100%;
}

.right-about-heading h2 {
    text-align: center;
    font-size: 1.5rem;
    color: darkorange;
}

.right-about-main-text {
    font-size: 1rem;
}

/* training */

#training {
    background-image: url('..//images/pitche-image3.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow: hidden;
    
}

#training div {
    color: black;
    width: 20%;
    height: 300px;
    float: left;
    padding: 30px 0 0 10px;
    text-align: center;
}

#training h3 {
    color: whitesmoke;
}
footer  {
    height: 150px;
    background-color: black;
}

footer p {
    color: orangered;
    text-align: center;
    font-size: 2rem;
}

.social-media {
    text-align: center;
}

.social-media li {
    display: inline;
}

.social-media i{
    font-size: 160%;
    color: blue;
    margin: 1%;
    padding: 1%;
}

#about {
    clear: both;
    font-size: 150%;
    background-color: red;
    text-align: center;
}

#about h1 {
    font-size: 200%;
}

#sign-up {
    background-color: red;
    width: 300px;
    padding: 20px;
    text-align: center;
    margin: auto;

}

#sign-up h1 {
    font-size: 300%;
}

#photos {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0;
}

#photos > img {
    width: 100%;
}

/* media queries */ 

@media (min-width:600px ) {
    #team-ethos {
        flex-direction: row;
        margin: 0 auto;
    


}

